ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: app.local
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /users(/|$)(.*)
            backend:
              service:
                name: users-users-service-charts
                port:
                  number: 8000
          - pathType: ImplementationSpecific
            path: /products(/|$)(.*)
            backend:
              service:
                name: products-products-service-charts
                port:
                  number: 8000
